--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 this is a new line
 </p>
 
-<img src="http://cdn1.buuteeq.com/upload/6202/frink_roatan_2015_460.jpg" alt="image missing!" style="width:25%" />
+<img src="http://www.flickr.com/photos/jimpatterson/5486345582/" alt="image missing!" style="width:25%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
