--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 this is a new line
 </p>
 
-<img src="http://www.flickr.com/photos/jimpatterson/5486345582/" alt="image missing!" style="width:25%" />
+<img src="https://i.pinimg.com/564x/a5/07/d2/a507d2923c834268af039983a505d4b2.jpg" alt="image missing!" style="width:25%" />
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
