--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ this is a new line
 
 <img src="https://i.pinimg.com/564x/a5/07/d2/a507d2923c834268af039983a505d4b2.jpg" alt="image missing!" style="width:25%" />
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/1.jpg?raw=true" alt="image missing!" style="width:25%" />
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2.jpg?raw=true" alt="image missing!" style="width:25%" />" alt="image missing!" style="width:25%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2.jpg?raw=true" alt="image missing!" style="width:25%" />" 
  
 <footer> 
 <a href="https://github.com/madeleinejohanson"> your footer text here</a>
