--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
  </div>
 
 
-<h1>This is a website</h1>
+<h1>code 1230 week one</h1>
 
-<p>paragraph text here<br><br>
+<p>25 diagrams<br><br>
 this is a new line
 </p>
 
