--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1>code 1230 week one</h1>
 
 <p>25 diagrams<br><br>
-this is a new line
+Z5027169 Mingshi Liu
 </p>
 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/6.jpg?raw=true" alt="image missing!" style="width:25%" />
