--- a/page2.html
+++ b/page2.html
@@ -16,18 +16,18 @@
 
 <h1>code 1230 week one</h1>
 
-<p>25 diagrams<br><br>
+<p>25 diagrams<p>
 Z5027169 Mingshi Liu
 </p>
 
  <h1>Cheonggyecheon River transformation</h1>
  
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:25%" />
-<p>1.	Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.
+<p>1.	Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.<br><br>
 
-2.	The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development. 
+<p>2.	The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development.<br><br> 
 
-3.	Environmental 
+<p>3.	Environmental 
 <br><br>
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:25%" />
 <p>a)	Flood protection
