--- a/page2.html
+++ b/page2.html
@@ -22,57 +22,56 @@ Z5027169 Mingshi Liu
 
  <h1>Cheonggyecheon River transformation</h1>
  
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:25%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:100%" />
 <p>1.	Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.<br><br>
 
 <p>2.	The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development.<br><br> 
 
 <p>3.	Environmental 
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:25%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:100%" />
 <p>a)	Flood protection
-Provides flood protection at least 200 years and can sustain a flow rate of 118mm/h.
+Provides flood protection at least 200 years and can sustain a flow rate of 118mm/h.<br><br>
 
-b)	Increased overall biodiversity
-From 2003 to the end of 2008 the number of plant species increasing from 62 to 308, fish species from 4 to 25, bird species from 6 to 36, aquatic invertebrate species from 5  to 53, insect species from 15 to 192, mammals from 2 to 4 and amphibians from 4 to 8. Totally overall biodiversity was increased by 639%
+<p>b)	Increased overall biodiversity
+From 2003 to the end of 2008 the number of plant species increasing from 62 to 308, fish species from 4 to 25, bird species from 6 to 36, aquatic invertebrate species from 5  to 53, insect species from 15 to 192, mammals from 2 to 4 and amphibians from 4 to 8. Totally overall biodiversity was increased by 639%.<br><br>
 
-c)	Reduced the urban heat island effect
-Temperatures along the stream is 3.3 to 5.9 degrees cooler than on a parallel road 4-7 blocks away. Because of the removal of the paved expressway, the cooling effect of the stream, the cooling effect of the stream, increased vegetation, reduction In auto trips, a 2.2-7.8% increase in wind speeds move through the corridor.
+<p>c)	Reduced the urban heat island effect
+Temperatures along the stream is 3.3 to 5.9 degrees cooler than on a parallel road 4-7 blocks away. Because of the removal of the paved expressway, the cooling effect of the stream, the cooling effect of the stream, increased vegetation, reduction In auto trips, a 2.2-7.8% increase in wind speeds move through the corridor.<br><br>
 
-d)	Reduced small-particle air pollution 
-Small-particle air pollution is reduced by 35% from 74 to 48 micrograms per cubic meter. The possibility  of respiratory disease of the residents in this area is more than twice in other parts of the city.
+<p>d)	Reduced small-particle air pollution 
+Small-particle air pollution is reduced by 35% from 74 to 48 micrograms per cubic meter. The possibility  of respiratory disease of the residents in this area is more than twice in other parts of the city.<br><br>
       
-      Social 
-a)	Increase in bus ridership and subway ridership in Seoul
-Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership and 3.3% in subway ridership in Seoul.
+<p>Social 
+<p>a)	Increase in bus ridership and subway ridership in Seoul
+Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership and 3.3% in subway ridership in Seoul.<br><br>
 
-b)	Attracts visitors daily
+<p>b)	Attracts visitors daily<br><br>
 There is an average of 64000 visitors daily. Furthermore 1408 are foreign tourists.
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:25%" />" 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2006.jpg?raw=true" style="width:25%" />
-<p>Economical
-a)	The double rate of property increases in other areas of Seoul.
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:50%" />" 
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2006.jpg?raw=true" style="width:50%" />
+<p>Economical<br><br>
+<p>a)	The double rate of property increases in other areas of Seoul.<br><br>
 
-b)	The double rate of business growth in downtown Seoul
+<p>b)	The double rate of business growth in downtown Seoul.<br><br>
 
-c)	Increased the number of working in the Cheonggyecheon area
+<p>c)	Increased the number of working in the Cheonggyecheon area<br><br>
 
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2000%20HEIGHT.jpg?raw=true" style="width:25%" />
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2007%20HEIGHT.jpg?raw=true" style="width:25%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2000%20HEIGHT.jpg?raw=true" style="width:50%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2007%20HEIGHT.jpg?raw=true" style="width:50%" />
 <p>4.	Favour
 
-Resident in this area 
-Decreased respiratory disease, increased overall biodiversity and reduced urban heat island effect.
-Business 
-Land agent
+<p>Resident in this area Decreased respiratory disease, increased overall biodiversity and reduced urban heat island effect.<br><br>
+<p>Business <br><br>
+<p>Land agent<br><br>
 <br><br>
  
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:25%" />
-<p>5.	Opposed
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:100%" />
+<p>5.	Opposed<br><br>
 
-Ridership pass by this area.
+<p>Ridership pass by this area.
 <br><br>
  
 <footer> 
