--- a/page2.html
+++ b/page2.html
@@ -40,8 +40,7 @@ Small-particle air pollution is reduced by 35% from 74 to 48 micrograms per cubi
 <p>a)	Increase in bus ridership and subway ridership in Seoul
 Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership and 3.3% in subway ridership in Seoul.<br><br>
 
-<p>b)	Attracts visitors daily<br><br>
-There is an average of 64000 visitors daily. Furthermore 1408 are foreign tourists.
+<p>b)	Attracts visitors daily. There is an average of 64000 visitors daily. Furthermore 1408 are foreign tourists.
 <br><br>
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:25%" />" 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/2006.jpg?raw=true" style="width:25%" />
