--- a/page2.html
+++ b/page2.html
@@ -56,16 +56,21 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/2007%20HEIGHT.jpg?raw=true" style="width:25%" />
 <p>4.	Favour
 
-<p>Resident in this area Decreased respiratory disease, increased overall biodiversity and reduced urban heat island effect.<br><br>
+<p>Resident in this area<br><br>
+<p>Decreased respiratory disease,increased overall biodiversity and reduced urban heat island effect may improve the life standard for the residents in this region.<br><br>
 <p>Business <br><br>
-<p>Land agent<br><br>
-<br><br>
+<p>After the regeneration and redevelopment, not the finance but the potential custom increased in this region. <br><br>
+<p>Builder<br><br>
+<p>Because of increasing property’s price,  Builder can get more profit in the process of building construction.<br><br>
+
  
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:50%" />
 <p>5.	Opposed<br><br>
 
-<p>Ridership pass by this area.
-<br><br>
+<p>Ridership pass by this area.<br><br>
+<p>There is not an overpass in this region, and it may lead to traffic jam.<br><br>
+<p>Residents in this area <br><br>
+<p>Because of  tourism and construction, they may result in noise and pollution. It will affect the residents‘ daily life.<br><br>
  
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
