--- a/page1.html
+++ b/page1.html
@@ -3,29 +3,77 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="style.css"/>
-<title>My first website</title>
+<title> Code 1230 week 1 </title>
 </head>
 
 <body>
 
  <div class="topnav" id="myTopnav">
  <a href="index.html">Home</a>
- <a href="page1.html">page1</a>
-<a href="page2.html">page2</a>
 
  </div>
 
-
-<h1>This is page 1</h1>
-
-<p>paragraph text here<br><br>
-this is a new line
+<h1>Cheonggyecheon River transformation</h1>
+Z5027169 Mingshi Liu
 </p>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:50%" />
+<p>1.	Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.<br><br>
 
-<img src="http://cdn1.buuteeq.com/upload/6202/frink_roatan_2015_460.jpg" alt="image missing!" style="width:25%" />
+<p>2.	The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development.<br><br> 
 
+<p>3.	Environmental 
+<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:50%" />
+<p>a)	Flood protection
+Provides flood protection at least 200 years and can sustain a flow rate of 118mm/h.<br><br>
+
+<p>b)	Increased overall biodiversity
+From 2003 to the end of 2008 the number of plant species increasing from 62 to 308, fish species from 4 to 25, bird species from 6 to 36, aquatic invertebrate species from 5  to 53, insect species from 15 to 192, mammals from 2 to 4 and amphibians from 4 to 8. Totally overall biodiversity was increased by 639%.<br><br>
+
+<p>c)	Reduced the urban heat island effect
+Temperatures along the stream is 3.3 to 5.9 degrees cooler than on a parallel road 4-7 blocks away. Because of the removal of the paved expressway, the cooling effect of the stream, the cooling effect of the stream, increased vegetation, reduction In auto trips, a 2.2-7.8% increase in wind speeds move through the corridor.<br><br>
+
+<p>d)	Reduced small-particle air pollution 
+Small-particle air pollution is reduced by 35% from 74 to 48 micrograms per cubic meter. The possibility  of respiratory disease of the residents in this area is more than twice in other parts of the city.<br><br>
+      
+<p>Social 
+<p>a)	Increase in bus ridership and subway ridership in Seoul
+Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership and 3.3% in subway ridership in Seoul.<br><br>
+
+<p>b)	Attracts visitors daily. There is an average of 64000 visitors daily. Furthermore 1408 are foreign tourists.
+<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:25%" />" 
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2006.jpg?raw=true" style="width:25%" />
+<p>Economical<br><br>
+<p>a)	The double rate of property increases in other areas of Seoul.<br><br>
+
+<p>b)	The double rate of business growth in downtown Seoul.<br><br>
+
+<p>c)	Increased the number of working in the Cheonggyecheon area<br><br>
+
+<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2000%20HEIGHT.jpg?raw=true" style="width:25%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2007%20HEIGHT.jpg?raw=true" style="width:25%" />
+<p>4.	Favour
+
+<p>Resident in this area<br><br>
+<p>Decreased respiratory disease,increased overall biodiversity and reduced urban heat island effect may improve the life standard for the residents in this region.<br><br>
+<p>Business <br><br>
+<p>After the regeneration and redevelopment, not the finance but the potential custom increased in this region. <br><br>
+<p>Builder<br><br>
+<p>Because of increasing property’s price,  Builder can get more profit in the process of building construction.<br><br>
+
+ 
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:50%" />
+<p>5.	Opposed<br><br>
+
+<p>Ridership pass by this area.<br><br>
+<p>There is not an overpass in this region, and it may lead to traffic jam.<br><br>
+<p>Residents in this area <br><br>
+<p>Because of  tourism and construction, they may result in noise and pollution. It will affect the residents‘ daily life.<br><br>
+ 
 <footer> 
-<a href="https://github.com/madeleinejohanson"> your footer text here</a>
+<a href="https://github.com/madeleinejohanson"> Z5027169</a>
 </footer>
 
 </body>
