--- a/page1.html
+++ b/page1.html
@@ -13,65 +13,43 @@
 
  </div>
 
-<h1>Cheonggyecheon River transformation</h1>
-Z5027169 Mingshi Liu
+<h1>TODTOWN Minhang Shanghai</h1>
+Z5027150 Zuoru ZHOU
 </p>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:50%" />
-<p>1.	Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/11.jpg?raw=true" style="width:50%" />
+<p>Todtwon predominantly located above a major subway and train transit hub in Minhang district of Shanghai, China. TOD is the first letter of transit, oriented and development which means a sustainable concept. In 2015, the government decided to develop a new retail master plan and interior design of the Todtown to reach a sustainable level. The project covers 740,000 square meters mix-use development encompass hotel, offices, residences, service apartments, open amenity spaces as well as a retail mall that acts as an anchor of the project. <br><br>
 
-<p>2.	The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development.<br><br> 
-
-<p>3.	Environmental 
-<br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:50%" />
-<p>a)	Flood protection
-Provides flood protection at least 200 years and can sustain a flow rate of 118mm/h.<br><br>
-
-<p>b)	Increased overall biodiversity
-From 2003 to the end of 2008 the number of plant species increasing from 62 to 308, fish species from 4 to 25, bird species from 6 to 36, aquatic invertebrate species from 5  to 53, insect species from 15 to 192, mammals from 2 to 4 and amphibians from 4 to 8. Totally overall biodiversity was increased by 639%.<br><br>
-
-<p>c)	Reduced the urban heat island effect
-Temperatures along the stream is 3.3 to 5.9 degrees cooler than on a parallel road 4-7 blocks away. Because of the removal of the paved expressway, the cooling effect of the stream, the cooling effect of the stream, increased vegetation, reduction In auto trips, a 2.2-7.8% increase in wind speeds move through the corridor.<br><br>
-
-<p>d)	Reduced small-particle air pollution 
-Small-particle air pollution is reduced by 35% from 74 to 48 micrograms per cubic meter. The possibility  of respiratory disease of the residents in this area is more than twice in other parts of the city.<br><br>
-      
-<p>Social 
-<p>a)	Increase in bus ridership and subway ridership in Seoul
-Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership and 3.3% in subway ridership in Seoul.<br><br>
-
-<p>b)	Attracts visitors daily. There is an average of 64000 visitors daily. Furthermore 1408 are foreign tourists.
-<br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:25%" />" 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2006.jpg?raw=true" style="width:25%" />
-<p>Economical<br><br>
-<p>a)	The double rate of property increases in other areas of Seoul.<br><br>
-
-<p>b)	The double rate of business growth in downtown Seoul.<br><br>
-
-<p>c)	Increased the number of working in the Cheonggyecheon area<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/22.jpg?raw=true" style="width:50%" />
+<p>a)	The population in Minhang district has increased from 2,029,000 to 2,534,300 during the period from 2007 to 2017. The old metro station constructed in 1998 is too outdates to provide publics necessary convenient facilities. Thus, urban transformation of Todtown is needed and required to satisfy the desires and expectations of publics. 
 
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2000%20HEIGHT.jpg?raw=true" style="width:25%" />
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2007%20HEIGHT.jpg?raw=true" style="width:25%" />
+
+
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/33.jpg?raw=true" style="width:50%" />" 
+ <p>The former monotonous metro station can only offer metro services but Todtown would change the original service mode to multi-service within a building complex. Multi-transport including bus, subway and taxi will be included in its transport service however the Todtown can offer commercial service such shopping, accommodation and office as well. 
+The proposed residential-office-retail-hotel projects sits on topof the 20 year-old Xinzhuang metro station. It will comprise 1000 uniits and seviced apartmetns, a shopping mall, a hotel and office palce. So ti changed original underground transport mode to an integral and inovative transport hub. 
+<br><br> 
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/44.jpg?raw=true" style="width:17%" />
+ <img src="https://github.com/MingshiLiu9/code1230/blob/master/55.jpg?raw=true" style="width:17%" />
+ <img src="https://github.com/MingshiLiu9/code1230/blob/master/66.jpg?raw=true" style="width:17%" />
+  
+<p>(1)	The old metro staion looks like a box that can only provided metro service.  <br><br>
+<p>(2)	To extend the middle part of the original box allow more activitis to occur. Then lift it up to form a place under the cantilever part would create a bus, walk path and other tranport mode centre. <br><br>
+
+<p>(3)	To set up a roof terrace on the top of the building to create more activities in vertical direction. Buildings, gardens and nature will generate a new community within the building complex.
+
+To build this kind of transport hub can effectively give locals and vistors more traveling modes. Besides, the concept of ‘Community in a community’ builds a new sustainable CBD offerd a range of interactivities between publics, nature and architecture. However, it is important to have approvals from government to start this urban transformation and exibition of the project provided by relative departments should be hold. That is used to collect citizens’ willings. 
+<br><br>
+
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/77.jpg?raw=truee" style="width:50%" />
+
 <p>4.	Favour
 
-<p>Resident in this area<br><br>
-<p>Decreased respiratory disease,increased overall biodiversity and reduced urban heat island effect may improve the life standard for the residents in this region.<br><br>
-<p>Business <br><br>
-<p>After the regeneration and redevelopment, not the finance but the potential custom increased in this region. <br><br>
-<p>Builder<br><br>
-<p>Because of increasing property’s price,  Builder can get more profit in the process of building construction.<br><br>
+<p>The Todtwon integrated both the commercial and environmental aspects into the design. The transit oriented mixed-use development will be a new destination that boasts positive lifestyle and leisure to the new surrounding residential community and is set to become a new commercial regional retail center in Shanghai.
 
- 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:50%" />
-<p>5.	Opposed<br><br>
+The project would cost about US$45 billion and be completed by 2022. The duration is too long which would make a range of bad issues to locals and environment. And it cost too much money, there is no evidence to state this project can get enough profit back. 
+<br><br>
 
-<p>Ridership pass by this area.<br><br>
-<p>There is not an overpass in this region, and it may lead to traffic jam.<br><br>
-<p>Residents in this area <br><br>
-<p>Because of  tourism and construction, they may result in noise and pollution. It will affect the residents‘ daily life.<br><br>
- 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
 </footer>
