--- a/page2.html
+++ b/page2.html
@@ -16,11 +16,12 @@
 <h1>Cheonggyecheon River transformation</h1>
 Z5027169 Mingshi Liu
 </p>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:50%" />
+<img src="https://i.pinimg.com/564x/49/80/2b/49802b9fb70fb4fb9700bcce82eb075e.jpg" style="width:50%" />
+
 <p>1.	Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.<br><br>
-
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:50%" />
 <p>2.	The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development.<br><br> 
-
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:50%" />
 <p>3.	Environmental 
 <br><br>
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:50%" />
@@ -64,7 +65,6 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
 <p>Because of increasing property’s price,  Builder can get more profit in the process of building construction.<br><br>
 
  
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:50%" />
 <p>5.	Opposed<br><br>
 
 <p>Ridership pass by this area.<br><br>
