--- a/page2.html
+++ b/page2.html
@@ -35,7 +35,7 @@ From 2003 to the end of 2008 the number of plant species increasing from 62 to 3
 Temperatures along the stream is 3.3 to 5.9 degrees cooler than on a parallel road 4-7 blocks away. Because of the removal of the paved expressway, the cooling effect of the stream, the cooling effect of the stream, increased vegetation, reduction In auto trips, a 2.2-7.8% increase in wind speeds move through the corridor.<br><br>
 
 <p>d)	Reduced small-particle air pollution 
-Small-particle air pollution is reduced by 35% from 74 to 48 micrograms per cubic meter. The possibility  of respiratory disease of the residents in this area is more than twice in other parts of the city.<br><br>
+Small-particle air pollution is reduced by 35% from 74 to 48 micrograms per cubic meter. The possibility  of respiratory disease of the residents in this area is more than twice in other parts of the city. (CABE 2011)<br><br>
       
 <p>Social 
 <p>a)	Increase in bus ridership and subway ridership in Seoul
@@ -43,8 +43,9 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
 
 <p>b)	Attracts visitors daily. There is an average of 64000 visitors daily. Furthermore 1408 are foreign tourists.
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:25%" />" 
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:25%" />
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/2006.jpg?raw=true" style="width:25%" />
+<p>(Scaadmin 2014)<br><br>
 <p>Economical<br><br>
 <p>a)	The double rate of property increases in other areas of Seoul.<br><br>
 
@@ -55,6 +56,7 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
 <br><br>
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/2000%20HEIGHT.jpg?raw=true" style="width:25%" />
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/2007%20HEIGHT.jpg?raw=true" style="width:25%" />
+<p>(Scaadmin 2014)<br><br>
 <p>4.	Favour
 
 <p>Resident in this area<br><br>
@@ -71,6 +73,11 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
 <p>There is not an overpass in this region, and it may lead to traffic jam.<br><br>
 <p>Residents in this area <br><br>
 <p>Because of  tourism and construction, they may result in noise and pollution. It will affect the residents‘ daily life.<br><br>
+ 
+ <p>Reference<br><br>
+ <p>CABE-Cheonggyecheon Restoration Project，http://webarchive.nationalarchives.gov.uk/20110118101111/http://www.cabe.org.uk/case-studies/cheonggyecheon-restoration-project
+
+<br><br>
  
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
