--- a/page2.html
+++ b/page2.html
@@ -78,7 +78,9 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
  <p>CABE-Cheonggyecheon Restoration Project，http://webarchive.nationalarchives.gov.uk/20110118101111/http://www.cabe.org.uk/case-studies/cheonggyecheon-restoration-project
 
 <br><br>
- 
+<p>Scaadmin Seoul (2014) Seoul Solution Urban Regeneration: Cheonggyecheon Restoration and Downtown Revitalization, https://www.seoulsolution.kr/node/2374?language=en<br><br>
+
+<p>Myung-Rae Cho （2010）The politics of urban nature restoration The case of Cheonggyecheon restoration in Seoul, Korea， https://online.liverpooluniversitypress.co.uk/doi/pdf/10.3828/idpr.2010.05<br><br>
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
 </footer>
