--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
  <div class="topnav" id="myTopnav">
  <a href="index.html">Home</a>
- <a href="Todtown.html">page1</a>
- <a href="Cheonggyecheon.html">page2</a>
+ <a href="Todtown.html">Todtown</a>
+ <a href="Cheonggyecheon.html">Cheonggyecheon</a>
+ <a href="test.html">test</a>
  </div>
 
 
