--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
 <body>
  <div style="width: 90vw;margin: auto;">
   <!-- 图片你改下地址就能换了img/img1.jpg -->
-  < img style="width: 90vw" src="img/img1.jpg">
+  < img style="width: 90vw" src="https://i.pinimg.com/564x/49/80/2b/49802b9fb70fb4fb9700bcce82eb075e.jpg">
   <!-- 文字内容一 -->
   <p>
    Mobile phone maps, navigation and online ride-hailing services make it easier than ever to get around town. At the same time, environmental monitoring is becoming more consistent and verifiable. This is reinforcing efforts to lower emissions and helping to make commitments to targets more manageable and realistic than ever.
