--- a/Cheonggyecheon.html
+++ b/Cheonggyecheon.html
@@ -3,61 +3,65 @@
 
 <head>
 <link rel="stylesheet" type="text/css" href="style.css"/>
+<meta charset="utf-8">
 <title> Code 1230 week 1 </title>
 </head>
 
 <body>
 
  <div class="topnav" id="myTopnav">
- <a href="index.html">Home</a>
+ <a href=" ">Home</a >
 
  </div>
 
+ <div style="width:928px;margin:0 auto;">
 <h1>Cheonggyecheon River transformation</h1>
 Z5027169 Mingshi Liu
-</p>
-<img src="https://i.pinimg.com/564x/49/80/2b/49802b9fb70fb4fb9700bcce82eb075e.jpg" style="width:50%" />
+</p >
+< img src="https://i.pinimg.com/564x/49/80/2b/49802b9fb70fb4fb9700bcce82eb075e.jpg" style="width:100%" />
 
-<p>1.	Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.<br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:50%" />
-<p>2.	The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development. (Myung-Rae Cho 2010）<br><br> 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:50%" />
-<p>3.	Environmental 
+
+<p>1. Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.<br><br>
+
+< img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:100%" />
+<p>2. The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development. (Myung-Rae Cho 2010）<br><br>
+< img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:100%" />
+<p>3. Environmental
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:50%" />
-<p>a)	Flood protection
+< img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:100%" />
+<p>a) Flood protection
 Provides flood protection at least 200 years and can sustain a flow rate of 118mm/h.<br><br>
 
-<p>b)	Increased overall biodiversity
+<p>b) Increased overall biodiversity
 From 2003 to the end of 2008 the number of plant species increasing from 62 to 308, fish species from 4 to 25, bird species from 6 to 36, aquatic invertebrate species from 5  to 53, insect species from 15 to 192, mammals from 2 to 4 and amphibians from 4 to 8. Totally overall biodiversity was increased by 639%.<br><br>
 
-<p>c)	Reduced the urban heat island effect
+<p>c) Reduced the urban heat island effect
 Temperatures along the stream is 3.3 to 5.9 degrees cooler than on a parallel road 4-7 blocks away. Because of the removal of the paved expressway, the cooling effect of the stream, the cooling effect of the stream, increased vegetation, reduction In auto trips, a 2.2-7.8% increase in wind speeds move through the corridor.<br><br>
 
-<p>d)	Reduced small-particle air pollution 
+<p>d) Reduced small-particle air pollution
 Small-particle air pollution is reduced by 35% from 74 to 48 micrograms per cubic meter. The possibility  of respiratory disease of the residents in this area is more than twice in other parts of the city. (CABE 2011)<br><br>
-      
-<p>Social 
-<p>a)	Increase in bus ridership and subway ridership in Seoul
+     
+<p>Social
+<p>a) Increase in bus ridership and subway ridership in Seoul
 Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership and 3.3% in subway ridership in Seoul.<br><br>
 
-<p>b)	Attracts visitors daily. There is an average of 64000 visitors daily. Furthermore 1408 are foreign tourists.
+<p>b) Attracts visitors daily. There is an average of 64000 visitors daily. Furthermore 1408 are foreign tourists.
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:25%" />
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2006.jpg?raw=true" style="width:25%" />
+< img src="https://github.com/MingshiLiu9/code1230/blob/master/2003.jpg?raw=true" style="width:25%" />
+< img src="https://github.com/MingshiLiu9/code1230/blob/master/2006.jpg?raw=true" style="width:25%" />
 <p>(Scaadmin 2014)<br><br>
 <p>Economical<br><br>
-<p>a)	The double rate of property increases in other areas of Seoul.<br><br>
+<p>a) The double rate of property increases in other areas of Seoul.<br><br>
 
-<p>b)	The double rate of business growth in downtown Seoul.<br><br>
+<p>b) The double rate of business growth in downtown Seoul.<br><br>
 
-<p>c)	Increased the number of working in the Cheonggyecheon area<br><br>
+<p>c) Increased the number of working in the Cheonggyecheon area<br><br>
 
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2000%20HEIGHT.jpg?raw=true" style="width:25%" />
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/2007%20HEIGHT.jpg?raw=true" style="width:25%" />
+< img src="https://github.com/MingshiLiu9/code1230/blob/master/2000%20HEIGHT.jpg?raw=true" style="width:25%" />
+< img src="https://github.com/MingshiLiu9/code1230/blob/master/2007%20HEIGHT.jpg?raw=true" style="width:25%" />
 <p>(Scaadmin 2014)<br><br>
-<p>4.	Favour
+<p>4. Favour
 
 <p>Resident in this area<br><br>
 <p>Decreased respiratory disease,increased overall biodiversity and reduced urban heat island effect may improve the life standard for the residents in this region.<br><br>
@@ -67,7 +71,7 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
 <p>Because of increasing property’s price,  Builder can get more profit in the process of building construction.<br><br>
 
  
-<p>5.	Opposed<br><br>
+<p>5. Opposed<br><br>
 
 <p>Ridership pass by this area.<br><br>
 <p>There is not an overpass in this region, and it may lead to traffic jam.<br><br>
@@ -78,11 +82,12 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
  <p>CABE-Cheonggyecheon Restoration Project，http://webarchive.nationalarchives.gov.uk/20110118101111/http://www.cabe.org.uk/case-studies/cheonggyecheon-restoration-project
 
 <br><br>
-<p>Scaadmin Seoul (2014) Seoul Solution Urban Regeneration: Cheonggyecheon Restoration and Downtown Revitalization, https://www.seoulsolution.kr/node/2374?language=en<br><br>
+<p>Scaadmin Seoul (2014) Seoul Solution Urban Regeneration: Cheonggyecheon Restoration and Downtown Revitalization, https://www.seoulsolution.kr/node/2374?language=en<;br><br>
 
-<p>Myung-Rae Cho （2010）The politics of urban nature restoration The case of Cheonggyecheon restoration in Seoul, Korea， https://online.liverpooluniversitypress.co.uk/doi/pdf/10.3828/idpr.2010.05<br><br>
-<footer> 
-<a href="https://github.com/madeleinejohanson"> Z5027169</a>
+<p>Myung-Rae Cho （2010）The politics of urban nature restoration The case of Cheonggyecheon restoration in Seoul, Korea， https://online.liverpooluniversitypress.co.uk/doi/pdf/10.3828/idpr.2010.05<;br><br>
+ <div>
+<footer>
+<a href="https://github.com/madeleinejohanson"> Z5027169</a >
 </footer>
 
 </body>
