--- a/Cheonggyecheon.html
+++ b/Cheonggyecheon.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <div style="width:928px;margin:0 auto;">
 
  <div class="topnav" id="myTopnav">
  <a href=" ">Home</a >
@@ -89,7 +90,7 @@ Between 2003 and the end of 2008, contributed to 15.1% increase in bus ridership
 <footer>
 <a href="https://github.com/madeleinejohanson"> Z5027169</a >
 </footer>
-
+</div>
 </body>
 
 </html>
