--- a/Cheonggyecheon.html
+++ b/Cheonggyecheon.html
@@ -7,7 +7,7 @@
 <title> Code 1230 week 1 </title>
 </head>
 
-<body>
+<body style="width:928px;margin:0 auto;">
   <div style="width:928px;margin:0 auto;">
 
  <div class="topnav" id="myTopnav">
