--- a/Cheonggyecheon.html
+++ b/Cheonggyecheon.html
@@ -16,20 +16,20 @@
  </div>
 
 
-<h1>Cheonggyecheon River transformation</h1>
+<h2>Cheonggyecheon River transformation</h2>
 Z5027169 Mingshi Liu
 </p >
-<img src="https://i.pinimg.com/564x/49/80/2b/49802b9fb70fb4fb9700bcce82eb075e.jpg" style="width:100%" />
+<img src="https://i.pinimg.com/564x/49/80/2b/49802b9fb70fb4fb9700bcce82eb075e.jpg" style="width:100%;height:320px;" />
 
 
 <p>1. Urban transformation is defined as developments of the city in the urbanization process and planning system. Urban transformation included in environmental urban district revitalization, neighbourhood commercial district management, business improvement district formation and renewal and certified main street management professional.<br><br>
 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:100%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:100%;height:320px;" />
 <p>2. The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development. (Myung-Rae Cho 2010）<br><br>
-< img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:100%" />
+< img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:100%;height:320px;" />
 <p>3. Environmental
 <br><br>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:100%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:100%;height:320px;" />
 <p>a) Flood protection
 Provides flood protection at least 200 years and can sustain a flow rate of 118mm/h.<br><br>
 
