--- a/Cheonggyecheon.html
+++ b/Cheonggyecheon.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="width:928px;margin:0 auto;text-align:left!important;">
-  <div style="width:928px;margin:0 auto;">
+  <div style="width:928px;margin:0 auto;padding-top:20px;">
 
  <div class="topnav" id="myTopnav">
  <a href=" ">Home</a >
