--- a/Cheonggyecheon.html
+++ b/Cheonggyecheon.html
@@ -27,7 +27,7 @@ Z5027169 Mingshi Liu
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/site%20plan%201.jpg?raw=true" style="width:100%;height:580px;" />
 <p>2. The Cheonggyecheon River linear park. There is a green oasis in a concrete jungle, this underwent a dramatic transformation from a traffic-choked elevated freeway and concrete paved waterway into a lush. The 3.6-mile-long “day-lit” stream corridor that attracts over 60,000 visitors daily. The restoration process has also provided huge boosts to local biodiversity and catalyzed economic development. (Myung-Rae Cho 2010）<br><br>
 
- <img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg" style="width:100%;height:320px;" />
+ <img src="https://github.com/MingshiLiu9/code1230/blob/master/diagram%201.jpg?raw=true" style="width:100%;height:320px;" />
 <p>3. Environmental
 <br><br>
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/flood%20level.jpg?raw=true" style="width:100%;height:320px;" />
