--- a/Cheonggyecheon.html
+++ b/Cheonggyecheon.html
@@ -11,7 +11,7 @@
   <div style="width:928px;margin:0 auto;padding-top:20px;">
 
  <div class="topnav" id="myTopnav">
- <a href=" ">Home</a >
+ <a href="index.html">Home</a >
 
  </div>
 
