--- a/Todtown.html
+++ b/Todtown.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-
+<div style="width:940px;margin:0 auto;">
  <div class="topnav" id="myTopnav">
  <a href="index.html">Home</a>
 
@@ -52,7 +52,7 @@ The project would cost about US$45 billion and be completed by 2022. The duratio
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
 </footer>
-
+</div>
 </body>
 
 </html>
