--- a/Todtown.html
+++ b/Todtown.html
@@ -6,7 +6,7 @@
 <title> Code 1230 week 1 </title>
 </head>
 
-<body>
+<body style="width:940px;margin:0 auto;">
 <div style="width:940px;margin:0 auto;">
  <div class="topnav" id="myTopnav">
  <a href="index.html">Home</a>
