--- a/Todtown.html
+++ b/Todtown.html
@@ -6,7 +6,7 @@
 <title> Code 1230 week 1 </title>
 </head>
 
-<body style="width:940px;margin:0 auto;">
+<body style="width:940px;margin:0 auto;text-align:left;">
 <div style="width:940px;margin:0 auto;">
  <div class="topnav" id="myTopnav">
  <a href="index.html">Home</a>
@@ -16,22 +16,22 @@
 <h1>TODTOWN Minhang Shanghai</h1>
 Z5027150 Zuoru ZHOU
 </p>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/11.jpg?raw=true" style="width:50%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/11.jpg?raw=true" style="width:100%" />
 <p>Todtwon predominantly located above a major subway and train transit hub in Minhang district of Shanghai, China. TOD is the first letter of transit, oriented and development which means a sustainable concept. In 2015, the government decided to develop a new retail master plan and interior design of the Todtown to reach a sustainable level. The project covers 740,000 square meters mix-use development encompass hotel, offices, residences, service apartments, open amenity spaces as well as a retail mall that acts as an anchor of the project. <br><br>
 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/22.jpg?raw=true" style="width:50%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/22.jpg?raw=true" style="width:100%" />
 <p>a)	The population in Minhang district has increased from 2,029,000 to 2,534,300 during the period from 2007 to 2017. The old metro station constructed in 1998 is too outdates to provide publics necessary convenient facilities. Thus, urban transformation of Todtown is needed and required to satisfy the desires and expectations of publics. 
 
 <br><br>
 
 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/33.jpg?raw=true" style="width:50%" />" 
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/33.jpg?raw=true" style="width:100%" />" 
  <p>The former monotonous metro station can only offer metro services but Todtown would change the original service mode to multi-service within a building complex. Multi-transport including bus, subway and taxi will be included in its transport service however the Todtown can offer commercial service such shopping, accommodation and office as well. 
 The proposed residential-office-retail-hotel projects sits on topof the 20 year-old Xinzhuang metro station. It will comprise 1000 uniits and seviced apartmetns, a shopping mall, a hotel and office palce. So ti changed original underground transport mode to an integral and inovative transport hub. 
 <br><br> 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/44.jpg?raw=true" style="width:17%" />
- <img src="https://github.com/MingshiLiu9/code1230/blob/master/55.jpg?raw=true" style="width:17%" />
- <img src="https://github.com/MingshiLiu9/code1230/blob/master/66.jpg?raw=true" style="width:17%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/44.jpg?raw=true" style="width:34%" />
+ <img src="https://github.com/MingshiLiu9/code1230/blob/master/55.jpg?raw=true" style="width:34%" />
+ <img src="https://github.com/MingshiLiu9/code1230/blob/master/66.jpg?raw=true" style="width:34%" />
   
 <p>(1)	The old metro staion looks like a box that can only provided metro service.  <br><br>
 <p>(2)	To extend the middle part of the original box allow more activitis to occur. Then lift it up to form a place under the cantilever part would create a bus, walk path and other tranport mode centre. <br><br>
@@ -41,7 +41,7 @@ The proposed residential-office-retail-hotel projects sits on topof the 20 year-
 To build this kind of transport hub can effectively give locals and vistors more traveling modes. Besides, the concept of ‘Community in a community’ builds a new sustainable CBD offerd a range of interactivities between publics, nature and architecture. However, it is important to have approvals from government to start this urban transformation and exibition of the project provided by relative departments should be hold. That is used to collect citizens’ willings. 
 <br><br>
 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/77.jpg?raw=truee" style="width:50%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/77.jpg?raw=truee" style="width:100%" />
 
 
 <p>The Todtwon integrated both the commercial and environmental aspects into the design. The transit oriented mixed-use development will be a new destination that boasts positive lifestyle and leisure to the new surrounding residential community and is set to become a new commercial regional retail center in Shanghai.
