--- a/Todtown.html
+++ b/Todtown.html
@@ -17,40 +17,46 @@
 Z5027150 Zuoru ZHOU
 </p>
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/11.jpg?raw=true" style="width:100%" />
-<p>Todtwon predominantly located above a major subway and train transit hub in Minhang district of Shanghai, China. TOD is the first letter of transit, oriented and development which means a sustainable concept. In 2015, the government decided to develop a new retail master plan and interior design of the Todtown to reach a sustainable level. The project covers 740,000 square meters mix-use development encompass hotel, offices, residences, service apartments, open amenity spaces as well as a retail mall that acts as an anchor of the project. <br><br>
+<p>Todtown predominantly located above a major subway and train transit hub in Minhang district of Shanghai, China. TOD is the first letter of transit, oriented and development which means a sustainable concept. In 2015, the government decided to develop a new retail master plan and interior design of the Todtown to reach a sustainable level. The project covers 740,000 square meters mix-use development encompass hotel, offices, residences, service apartments, open amenity spaces as well as a retail mall that acts as an anchor of the project.  <br><br>
 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/22.jpg?raw=true" style="width:100%" />
-<p>a)	The population in Minhang district has increased from 2,029,000 to 2,534,300 during the period from 2007 to 2017. The old metro station constructed in 1998 is too outdates to provide publics necessary convenient facilities. Thus, urban transformation of Todtown is needed and required to satisfy the desires and expectations of publics. 
+<p>a)	The population in Shanghai has increased from 16.76 million to 23.74 million during the period from 2005 to 2015 as the graph shown below. The old metro station constructed in 1998 is too outdates to provide publics necessary convenient facilities. Thus, urban transformation of Todtown is needed and required to satisfy the desires and expectations of publics.  
 
 <br><br>
 
 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/33.jpg?raw=true" style="width:100%" />" 
- <p>The former monotonous metro station can only offer metro services but Todtown would change the original service mode to multi-service within a building complex. Multi-transport including bus, subway and taxi will be included in its transport service however the Todtown can offer commercial service such shopping, accommodation and office as well. 
-The proposed residential-office-retail-hotel projects sits on topof the 20 year-old Xinzhuang metro station. It will comprise 1000 uniits and seviced apartmetns, a shopping mall, a hotel and office palce. So ti changed original underground transport mode to an integral and inovative transport hub. 
-<br><br> 
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/44.jpg?raw=true" style="width:32%" />
- <img src="https://github.com/MingshiLiu9/code1230/blob/master/55.jpg?raw=true" style="width:32%" />
- <img src="https://github.com/MingshiLiu9/code1230/blob/master/66.jpg?raw=true" style="width:32%" />
-  
-<p>(1)	The old metro staion looks like a box that can only provided metro service.  <br><br>
-<p>(2)	To extend the middle part of the original box allow more activitis to occur. Then lift it up to form a place under the cantilever part would create a bus, walk path and other tranport mode centre. <br><br>
+ <p>The former monotonous metro station can only offer metro services but Todtown would change the original service mode to multi-service within a building complex. Multi-transport including bus, subway and taxi will be included in its transport service however the Todtown can offer commercial service such as shopping, accommodation and office as well.  
+The proposed residential-office-retail-hotel projects sits on topof the 20 year-old Xinzhuang metro station. It will comprise 1000 uniits and seviced apartmetns, a shopping mall, a hotel and office palce. So ti changed original underground transport mode to an integral and inovative transport hub.<br><br> 
 
-<p>(3)	To set up a roof terrace on the top of the building to create more activities in vertical direction. Buildings, gardens and nature will generate a new community within the building complex.
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/Charles%201.png?raw=true" style="width:32%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/Charles%202.png?raw=true" style="width:32%" />  
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/44.jpg?raw=true" style="width:32%" />
+  
+<p>(1)	(1)	The old metro staion looks like a box that can only provided metro service.  <br><br>
+<p>(2)	(2)	To extend the middle part of the original box allow more activitis to occur. Then lift it up to form a place under the cantilever part would create bike path, walk path and other tranport mode centre.  <br><br>
+
+<p>(3)	(3)	To set up a roof terrace on the top of the building to create more activities in vertical direction. Buildings, gardens and nature will generate a new community within the building complex.
 
 To build this kind of transport hub can effectively give locals and vistors more traveling modes. Besides, the concept of ‘Community in a community’ builds a new sustainable CBD offerd a range of interactivities between publics, nature and architecture. However, it is important to have approvals from government to start this urban transformation and exibition of the project provided by relative departments should be hold. That is used to collect citizens’ willings. 
+ 
 <br><br>
 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/77.jpg?raw=truee" style="width:100%" />
 
 
-<p>The Todtwon integrated both the commercial and environmental aspects into the design. The transit oriented mixed-use development will be a new destination that boasts positive lifestyle and leisure to the new surrounding residential community and is set to become a new commercial regional retail center in Shanghai.
+<p>The Todtown integrated both the commercial and environmental aspects into the design. The transit oriented mixed-use development will be a new destination that boasts positive lifestyle and leisure to the new surrounding residential community and is set to become a new commercial regional retail center in Shanghai.
 
-The project would cost about US$45 billion and be completed by 2022. The duration is too long which would make a range of bad issues to locals and environment. And it cost too much money, there is no evidence to state this project can get enough profit back. 
+The project would cost about US$1.5 billion (about A$1.8 billion) and be completed by 2020 (Leanna, 2017). The duration is too long which would make a range of bad issues to locals and environment. As it cost too much money, there is no enough evidence to state this project can get enough profit back. 
+ 
 <br><br>
+ 
+<p>Reference List<br><br>
+ 
+<p>1.	Garfield, Leanna 2007, 8 billion-dollar mega projects that will transform the world’s greatest cities by 2030, The Insider. https://www.businessinsider.com.au/mega-projects-cities-development-2017-7?r=US&IR=T#/#shanghai-china-todtown-1    <br><br>
 
 <footer> 
-<a href="https://github.com/madeleinejohanson"> Z5027169</a>
+<a href="https://github.com/madeleinejohanson"> Z5027150</a>
 </footer>
 </div>
 </body>
