--- a/Todtown.html
+++ b/Todtown.html
@@ -17,17 +17,23 @@
 Z5027150 Zuoru ZHOU
 </p>
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/11.jpg?raw=true" style="width:100%" />
+<p>Figure – 1: Todtown Rendering http://www.interiordesign.net/slideshows/detail/9084-new-builds-in-shanghai-mvrdvs-flower-building-keng/?single=true <br><br>
 <p>Todtown predominantly located above a major subway and train transit hub in Minhang district of Shanghai, China. TOD is the first letter of transit, oriented and development which means a sustainable concept. In 2015, the government decided to develop a new retail master plan and interior design of the Todtown to reach a sustainable level. The project covers 740,000 square meters mix-use development encompass hotel, offices, residences, service apartments, open amenity spaces as well as a retail mall that acts as an anchor of the project.  <br><br>
 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/22.jpg?raw=true" style="width:100%" />
+<p>Figure-2: Contrast of former metro station and Todtown transport hub
+http://www.interiordesign.net/slideshows/detail/9084-new-builds-in-shanghai-mvrdvs-flower-building-keng/?single=true 
+https://en.wikipedia.org/wiki/Xinzhuang_station_(Shanghai_Metro)  
+<br><br>
 <p>a)	The population in Shanghai has increased from 16.76 million to 23.74 million during the period from 2005 to 2015 as the graph shown below. The old metro station constructed in 1998 is too outdates to provide publics necessary convenient facilities. Thus, urban transformation of Todtown is needed and required to satisfy the desires and expectations of publics.  
 
 <br><br>
 
+<p>The former monotonous metro station can only offer metro services but Todtown would change the original service mode to multi-service within a building complex. Multi-transport including bus, subway and taxi will be included in its transport service however the Todtown can offer commercial service such as shopping, accommodation and office as well.<br><br>
 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/33.jpg?raw=true" style="width:100%" />" 
- <p>The former monotonous metro station can only offer metro services but Todtown would change the original service mode to multi-service within a building complex. Multi-transport including bus, subway and taxi will be included in its transport service however the Todtown can offer commercial service such as shopping, accommodation and office as well.  
-The proposed residential-office-retail-hotel projects sits on topof the 20 year-old Xinzhuang metro station. It will comprise 1000 uniits and seviced apartmetns, a shopping mall, a hotel and office palce. So ti changed original underground transport mode to an integral and inovative transport hub.<br><br> 
+   
+<p>The proposed residential-office-retail-hotel projects sits on topof the 20 year-old Xinzhuang metro station. It will comprise 1000 uniits and seviced apartmetns, a shopping mall, a hotel and office palce. So ti changed original underground transport mode to an integral and inovative transport hub.<br><br> 
 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/Charles%201.png?raw=true" style="width:32%" />
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/Charles%202.png?raw=true" style="width:32%" />  
