--- a/Todtown.html
+++ b/Todtown.html
@@ -28,7 +28,13 @@ https://en.wikipedia.org/wiki/Xinzhuang_station_(Shanghai_Metro)
 <p>a)	The population in Shanghai has increased from 16.76 million to 23.74 million during the period from 2005 to 2015 as the graph shown below. The old metro station constructed in 1998 is too outdates to provide publics necessary convenient facilities. Thus, urban transformation of Todtown is needed and required to satisfy the desires and expectations of publics.  
 
 <br><br>
+ 
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/charler%203.png?raw=true" style="width:100%" />"
 
+ <p>Figure -4: Population of Shanghai from 1970 to 2030 
+https://www.statista.com/statistics/466938/china-population-of-shanghai/ 
+<br><br>
+ 
 <p>The former monotonous metro station can only offer metro services but Todtown would change the original service mode to multi-service within a building complex. Multi-transport including bus, subway and taxi will be included in its transport service however the Todtown can offer commercial service such as shopping, accommodation and office as well.<br><br>
 
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/33.jpg?raw=true" style="width:100%" />" 
