--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
  <a href="index.html">Home</a>
  <a href="Todtown.html">Todtown</a>
  <a href="Cheonggyecheon.html">Cheonggyecheon</a>
+ <a href="Assignment 2 .html">Assignment 2</a>
+ Assignment 2 .html
  </div>
 
 
