--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <a href="index.html">Home</a>
  <a href="Todtown.html">Todtown</a>
  <a href="Cheonggyecheon.html">Cheonggyecheon</a>
- <a href="Assignment 2 .html">Assignment 2</a>
+ <a href="Assignment 2 .html"></a>
  Assignment 2 .html
  </div>
 
@@ -30,7 +30,7 @@ Z5027169 Mingshi Liu
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/65.jpg?raw=true" alt="image missing!" style="width:25%" />
  
 <footer> 
-<a href="https://github.com/madeleinejohanson"> your footer text here</a>
+<a href="https://github.com/madeleinejohanson"> z5027169</a>
 </footer>
 
 </body>
