--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
  <a href="index.html">Home</a>
  <a href="Todtown.html">Todtown</a>
  <a href="Cheonggyecheon.html">Cheonggyecheon</a>
- <a href="Assignment 2.html"></a>
- Assignment 2 .html
+ <a href="Assignment 2.html">Assignment 2</a>
  </div>
 
 
