--- a/Assignment 2.html
+++ b/Assignment 2.html
@@ -13,14 +13,14 @@
 
  </div>
 
-<h1>TODTOWN Minhang Shanghai</h1>
+<h1>Week 5</h1>
 Z5027169 Mingshi LIU
 </p>
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/only%20m%20walk.jpeg?raw=true" style="width:100%" />
 <p>Figure-1 This diagram shows the male only transport on foot<br><br>
 
  <img src="https://github.com/MingshiLiu9/code1230/blob/master/PG%20M%20.jpeg?raw=true" style="width:100%" />
- <p>Figure-1 This diagram shows the male only transport on foot  <br><br>
+ <p>Figure-1 This diagram shows the male from 35 to 55 which are Post graduate.  <br><br>
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
