--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  <a href="Todtown.html">Todtown</a>
  <a href="Cheonggyecheon.html">Cheonggyecheon</a>
  <a href="Assignment 2.html">Assignment 2</a>
+ <a href="Assignment geo.html">Assignment geo</a>
  </div>
 
 
