--- a/Assignment 2.html
+++ b/Assignment 2.html
@@ -13,14 +13,27 @@
 
  </div>
 
-<h1>Week 5</h1>
+<h1>Assignment 2</h1>
 Z5027169 Mingshi LIU
 </p>
-<img src="https://github.com/MingshiLiu9/code1230/blob/master/only%20m%20walk.jpeg?raw=true" style="width:100%" />
-<p>Figure-1 This diagram shows the male only transport on foot<br><br>
+ 
+<p>In 2016 ,data journalism can be defined as a specific journalism using numerical data in the production and distribution in the digital era in order to reflect the increased role. 
+ <br><br>
+<p>A good piece of data journalism<br><br>
+<p>https://www.projectknow.com/discover/drug-talk-rock/<br><br>
+<p>These data are used for urban investigation or urban transformation in government or urban transformation companies. <br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/M%20label.jpeg?raw=true" style="width:100%" />
+<p>In 2016 , the education level, a completed master’s degree, has a relationship with site location in NSW. The higher level of education is at the center of CBD, and lower level of education is at the outside of this site. The reason for unequal educational level is unequal educational condition. According to researches, most of universities are located around the center or have a shorter distance to center comparing with villages. In the other hand, 35-44 is the middle age of citizens. They take the main responsibility for the country. Therefore their educational level is vital for investigation and research.<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/F%20label.jpeg?raw=true" style="width:100%" />
+<p>In 2016 , the female education level distribution is like a circle. From the center of the circle to the outside, percentage of female population aged 35-44 with a completed master’s degree decreased. According to the information that we can get from this picture, female distribution is as same as the male.  Because master degree is a relative high and specific education level. The percentage of female population aged 35-44 with a completed master’s degree is relative low. Not only some universities which is surrounding center but a better development, female masters prefer to work in the city.<br><br>
 
- <img src="https://github.com/MingshiLiu9/code1230/blob/master/PG%20M%20.jpeg?raw=true" style="width:100%" />
- <p>Figure-1 This diagram shows the male from 35 to 55 which are Post graduate.  <br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/m-f%20label.jpeg?raw=true" style="width:100%" />
+<p>The difference between male and female percentage of population age 35-44 with a completed master’s degree is not clear at the center but is clear far away from the city. The pink label shows that female is higher than the male. In addition that the blue label illustrate the opposite condition. The percentage of female education level is higher than the male surrounding the city. However the condition is opposite at the center. Woman has more passion for research study  comparing with man on hard condition. This is the reason why above phenomenon exist.<br><br>
+
+<p>Latte line<br><br>
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/F.jpg?raw=true" style="width:50%" />
+<img src="https://github.com/MingshiLiu9/code1230/blob/master/M.jpg?raw=true" style="width:50%" />
+<p>In Sydney, the latte line, an imaginary boundary, also divides the education. If you are above that line you are a “have”. If you are below that line you are a “have-not”. Latte line runs from the airport north-west through parramatta. When compared with the areas below the latte line in the southwest, the schools above the latte line are responsible for producing the bulk of the highest HSC result. According to this diagram, not only male but also female educational level are divided by latte line.  Above the latte line the colour is lighter than the  areas below the latte line. In the other hands , the comparison between male and female is illustrated by two labels. These graphs show that the percentage of population age 35-44 with a completed master’s degree. More jobs are being created to the north of latte line, this is another reason why the percentage of master is higher above the line.<br><br>
 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
