--- a/Assignment 2.html
+++ b/Assignment 2.html
@@ -35,6 +35,9 @@ Z5027169 Mingshi LIU
 <img src="https://github.com/MingshiLiu9/code1230/blob/master/M.jpg?raw=true" style="width:40%" />
 <p>In Sydney, the latte line, an imaginary boundary, also divides the education. If you are above that line you are a “have”. If you are below that line you are a “have-not”. Latte line runs from the airport north-west through parramatta. When compared with the areas below the latte line in the southwest, the schools above the latte line are responsible for producing the bulk of the highest HSC result. According to this diagram, not only male but also female educational level are divided by latte line.  Above the latte line the colour is lighter than the  areas below the latte line. In the other hands , the comparison between male and female is illustrated by two labels. These graphs show that the percentage of population age 35-44 with a completed master’s degree. More jobs are being created to the north of latte line, this is another reason why the percentage of master is higher above the line.<br><br>
 
+ 
+<p>3D Model link: https://mingshiliu9.github.io/Map2/<br><br>
+ 
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
 </footer>
