--- a/Assignment 2.html
+++ b/Assignment 2.html
@@ -38,7 +38,7 @@ Z5027169 Mingshi LIU
  
 <p>Sydney 3D Model link: https://mingshiliu9.github.io/Map2/<br><br>
 <p>NSW 3D Model link : https://mingshiliu9.github.io/MapWebsite/<br><br>
-<p>The reason why created maps in various regions is not to compare  with male and female distribution but the difference between Sydney and NSW. Because of choice and education the Height and colour at the centre is extremely darker than other regions. According to the information that we can get from the graph coastal regions’ height is high but colour is lighter. It means male educational level is higher than the female in this region. In the other aspect , percentage of female master is higher in inland region.<br><br>
+<p>The reason why created maps in various regions is not to compare  with male and female distribution but illustrate the difference between Sydney and NSW. Because of choices and educational condition the height and colour at the centre is extremely higher and darker than other regions. According to the information that we can get from the graph coastal regions’ height is high but colour is lighter. It means male educational level is higher than the female in this region. In the other aspect , percentage of female master is higher in inland region.<br><br>
 <footer> 
 <a href="https://github.com/madeleinejohanson"> Z5027169</a>
 </footer>
